fix(Search): add z-index to results

--- a/packages/orion/src/Search/search.css
+++ b/packages/orion/src/Search/search.css
@@ -25,7 +25,7 @@
 }
 
 .orion.search.active .results {
-  @apply block rounded;
+  @apply block rounded z-50;
 }
 
 .orion.search.active .results > .message.empty {
